--- a/plugin/css/styles.css
+++ b/plugin/css/styles.css
@@ -7,21 +7,43 @@
   --ic-brand-Login-body-bgd-shadow-color: #282828;
   --ic-brand-global-nav-menu-item__text-color: #C7CDD1;
   --ic-brand-global-nav-menu-item__text-color--active: #fff;
-  --ic-brand-global-nav-ic-icon-svg-fill--active: #fff;
+  --ic-brand-global-nav-ic-icon-svg-fill--active: #fff; /* element for nav bar logo and hover bg.. also to do unless change text colot of da hover thingy */
   --ic-brand-font-color-dark-lightened-15: #C7CDD1;
   --eHiXd-linkColor: #fff;
+  --fCrpb-color: #b8bbbd;
+  --ic-brand-font-color-dark: #b8bbbd ;
+  --jpyTq-color: #b8bbbd;
+  --fOyUs-color: #b8bbbd;
 }
 
 .ic-DashboardCard, .ic-DashboardCard__header_content, .header,
 .ic-DashboardCard__action-container, .item-group-container, .ig-row, .header-bar-outer-container
 , .tray-with-space-for-global-nav, .fLzZc_caGd, .fc-body, .fc-content, .fc-event-container,
-.comm-channel, .grouping, th, .table, .planner-day, .nothingPlannedContainer_hppr
-, .comments, .roster-tab, .rosterUser, .syllabus_assignment, tbody, .day_date, .table, .table-striped, .ic-flash-error,
+.comm-channel, .grouping, th, .table, .nothingPlannedContainer_hppr
+, .comments, .roster-tab, .rosterUser, .syllabus_assignment, tbody, .day_date, .planner-day, .table, .table-striped, .ic-flash-error,
 span[role=dialog], span[role=dialog] > div, .agenda-wrapper, .agenda-day, .agenda-event__container,
 .event-details, .rubric_title, .content_box {
-    background-color: #282828 !important;
+    background-color: #1f1f1f !important;
 }
 
+/*
+.planner-day{
+    background-color: #282828;
+}*/
+
+/*.fOyUs_ImeN{
+    color: #C7CDD1; 
+}*/
+#calendar-list-holder ul li:hover{
+    background-color: #585858 !important;
+}
+
+#calendar-list-holder{
+    background-color: #1f1f1f !important;
+}
+.ef-item-selected{
+    background-color: #585858 !important;
+}
 .react-rubric tr, .react-rubric th {
     background-color: #282828 !important;
     color: #888 !important;
@@ -32,8 +54,8 @@ span[role=dialog], span[role=dialog] > div, .agenda-wrapper, .agenda-day, .agend
     color: #888 !important;
 }
 
-body, .header-bar, .ui-tabs-anchor, .quiz-submission, .ig-header, .accessible-toggler, .ic-Input, .ic-DashboardCard__box__header {
-    background: #1f1f1f !important;
+body, .header-bar, .ui-tabs-anchor, .quiz-submission, .ig-header, .accessible-toggler, .ic-Input, .ic-DashboardCard__box__header, .ui-button {
+    background-color: #1f1f1f !important;
     color: #C7CDD1 !important;
 }
 
@@ -51,7 +73,7 @@ body, .header-bar, .ui-tabs-anchor, .quiz-submission, .ig-header, .accessible-to
 }
 
 .Button, .btn {
-    background-color: #282828 !important;
+    background-color: #1f1f1f !important;
     color: #C7CDD1 !important;
 }
 
@@ -71,11 +93,11 @@ a {
 }
 
 .Day-styles__root {
-    color: #fff !important;
+    color: #282828 !important;
 }
 
 .EmptyDays-styles__root {
-    background-color: #282828 !important;
+    background-color: #1f1f1f !important;
     color: #fff !important;
 }
 
@@ -104,7 +126,7 @@ a {
 }
 
 
-.course-list-table .course-list-table-row:hover, .ef-item-row:hover, tr:hover {
+.course-list-table .course-list-table-row:hover, .ef-item-row:hover, tr:hover, .ic-app-header__menu-list-link:hover {
     background-color: #4b4b4b !important;
 }
 
